# s3-loader

./: .gitignore  README.md  pyproject.toml
s3_loader/: main.py
s3_uploader/: main.py
