[tool.poetry]
name = "s3-loader"
version = "1.1.2"
description = "wrapper script for uploading files and dirs to s3"
authors = ["phil-bell <philhabell@gmail.com>"]
license = "GNU General Public License"
repository = "https://github.com/phil-bell/s3-loader"
documentation = "https://github.com/phil-bell/s3-loader/blob/main/README.md"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.6.12"
boto3 = "^1.16.63"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.scripts]
s3-loader = "s3_loader.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
